Dyntopo- attributes warning pop's up when there are no attibutes #119177

Closed
opened 2024-03-07 19:29:40 +01:00 by Nahuel Belich · 2 comments

System Information
Operating system: Linux-6.5.0-21-generic-x86_64-with-glibc2.35 64 Bits, X11 UI
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-05 21:11, hash: 38208ed1533e
Worked: (newest version of Blender that worked as expected)

Short description of error
trying to enable dyntopo in an object with no attributes the pop up warning message appears, something that is nice if there are but if there are no attributes, its extremely annoying.

Exact steps for others to reproduce the error

BUG DYNTOPO ATRIBUTES .blend
1- Select the cube and enter sculpt mode
2- Click in the interface the little checkbox to enable Dyntopo
image

Nothing happen its part of the bug, it works normally as it should

3-Click again to disable Dyntopo
4-Click to enable Dyntopo

Now it appear the warning that shouldn't because nothing change.
image

**System Information** Operating system: Linux-6.5.0-21-generic-x86_64-with-glibc2.35 64 Bits, X11 UI Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-05 21:11, hash: `38208ed1533e` Worked: (newest version of Blender that worked as expected) **Short description of error** trying to enable dyntopo in an object with no attributes the pop up warning message appears, something that is nice if there are but if there are no attributes, its extremely annoying. **Exact steps for others to reproduce the error** [BUG DYNTOPO ATRIBUTES .blend](/attachments/bf2c4f73-d427-4880-968c-6e3f01492e4f) 1- Select the cube and enter sculpt mode 2- Click in the interface the little checkbox to enable Dyntopo ![image](/attachments/121d1588-7035-42ac-8f95-1322493c7948) Nothing happen its part of the bug, it works normally as it should 3-Click again to disable Dyntopo 4-Click to enable Dyntopo Now it appear the warning that shouldn't because nothing change. ![image](/attachments/23db723c-1317-4f0d-829d-6ce909e241e8)
Nahuel Belich added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2024-03-07 19:29:41 +01:00

My guess is that the Sculpt Mask Data that is created and thus the mesh now has an attribute. (I may be wrong)
I'm not very familiar with the code to know if this Mask Data is really necessary.
Confirming.

My guess is that the `Sculpt Mask Data` that is created and thus the mesh now has an attribute. (I may be wrong) I'm not very familiar with the code to know if this Mask Data is really necessary. Confirming.
Germano Cavalcante added
Module
Sculpt, Paint & Texture
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-03-07 22:08:14 +01:00

I've made some tests and the warning is definitely caused by the sculpt mask. If you delete the .sculpt_mask attribute before activating dyntopo (or alt+q switching to an object with dyntopo enabled), then the warning will not trigger.

This happened before with the .select_ attributes: blender/blender#104535

I've made some tests and the warning is definitely caused by the sculpt mask. If you delete the `.sculpt_mask` attribute before activating dyntopo (or alt+q switching to an object with dyntopo enabled), then the warning will not trigger. This happened before with the `.select_` attributes: blender/blender#104535
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2024-03-19 15:47:30 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-19 16:55:36 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119177
No description provided.